Refactor to remove static methods
Removed static methods for getting ExtensionHelpers and Callbacks
to make code more clear about dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,15 @@
 			<groupId>net.portswigger.burp.extender</groupId>
 			<artifactId>burp-extender-api</artifactId>
 			<version>2.3</version>
+			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.11.0</version>
 			</plugin>
 		</plugins>
 	</build>
